# neofin-machine-learning-engineer-challenge

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  docker-compose.yml  example.json  main.py  mypy.ini  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: builder.yaml  linters.yml  release-please.yaml  test.yaml
charts/customer-ml/: Chart.yaml  values.yaml
charts/customer-ml/templates/: _helpers.tpl  customer_clusterip.yaml  customer_deployment.yaml  customer_ingress.yaml  hpa.yaml  service-accounts.yaml
models/: customer_classification_pipeline.pkl  modelo_onehotenc.pkl  target_encoder.pkl
models/ml/: classifier.py
models/schemas/: customer.py
notebooks/: Test Case - ML Engineer.ipynb
routes/: home.py
routes/v1/: card_predict.py  customer_predict.py
tests/: load_test.py  load_test_new.py  test_response.py
