[tool.poetry]
name = "neofin-machine-learning-engineer-challenge"
version = "0.1.0"
description = ""
authors = ["GersonRS <gersonrodriguessantos8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
requests = "^2.32.3"
jinja2 = "^3.1.4"
uvicorn = "^0.30.0"
gunicorn = "^22.0.0"
pydantic = "^2.7.2"
starlette = "^0.37.2"
python-multipart = "^0.0.9"
scikit-learn = "1.4.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
xgboost = "^2.0.3"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
imblearn = "^0.0"
statsmodels = "^0.14.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
locust = "^2.28.0"
codecov = "^2.1.13"
pytest-cov = "^5.0.0"
pytest-md = "^0.2.0"
pytest-emoji = "^0.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/ignore
  | data
  | .github
  | htmlcov
)/
'''
